--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!-- 	
-	Student Name: 
-	File Name: 
+	Student Name: erik stephens
+	File Name: analyze
 	Date: 
 -->
 <html lang="en">
 <head>
-	<title></title>
+	<title>Chapter 3 Analyze</title>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -16,17 +16,21 @@
 	</header>
 	
 	<main>
+	<div id="Resources">
+	<h2>Design Resources</h2><br>
 	
-	Web Design Resources
-	W3C
-	W3 Schools
-	HTML
-	Smashing Magazine
-	Image Compressor
-	HTML Validator
-	Emmet
+<ul>
+	<li>W3C</li>
+	<li>W3 Schools</li>
+	<li>HTML</li>
+	<li>Smashing Magazine</li>
+	<li>Image Compressor</li>
+	<li>HTML Validator</li>
+	<li>Emmet</li>
+</ul><br>
+	
 	<img src="html5">
-	
+	</div>
 	</main>
 	
 	<footer>
