--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -20,10 +20,10 @@
 	<h2>Design Resources</h2><br>
 	
 <ul>
-	<li>W3C</li>
-	<li>W3 Schools</li>
-	<li>HTML</li>
-	<li>Smashing Magazine</li>
+	<li><a href="https://www.W3.com/">w3c</a></li>
+	<li><a href="https://www.w3schhol.com/">Schools</a></li>
+	<li><a href="https://www.html.com/">html</a></li>
+	<li><a href="http:///www.smashinagmaine">Smashing Magazine</a></li>
 	<li>Image Compressor</li>
 	<li>HTML Validator</li>
 	<li>Emmet</li>
