--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -24,7 +24,7 @@
 	<li><a href="https://www.w3schhol.com/">Schools</a></li>
 	<li><a href="https://www.html.com/">html</a></li>
 	<li><a href="http:///www.smashinagmaine">Smashing Magazine</a></li>
-	<li>Image Compressor</li>
+	<li><a href="https://imageresizer.com/image-compressor">Image Compressor</a> Compressor</li>
 	<li>HTML Validator</li>
 	<li>Emmet</li>
 </ul><br>
