--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -20,13 +20,13 @@
 	<h2>Design Resources</h2><br>
 	
 <ul>
-	<li><a href="https://www.W3.com/">w3c</a></li>
-	<li><a href="https://www.w3schhol.com/">Schools</a></li>
-	<li><a href="https://www.html.com/">html</a></li>
-	<li><a href="http:///www.smashinagmaine">Smashing Magazine</a></li>
-	<li><a href="https://imageresizer.com/image-compressor">Image Compressor</a> Compressor</li>
-	<li>HTML Validator</li>
-	<li>Emmet</li>
+	<li><a href="https://www.w3.org/" target="_blank">w3c</a></li>
+	<li><a href="https://www.w3schools.com/"  target="_blank">Schools</a></li>
+	<li><a href="https://www.html.com/"  target="_blank">html</a></li>
+	<li><a href="http:///www.smashinagmaine"  target="_blank">Smashing Magazine</a></li>
+	<li><a href="https://imageresizer.com/image-compressor"  target="_blank">Image Compressor</a></li>
+	<li><a href="https://validator.w3.org/"  target="_blank">HTML Validator</a></li>
+	<li><a href="https://emmet.io/"  target="_blank">Emmet</a></li>
 </ul><br>
 	
 	<img src="html5">
