--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -23,7 +23,7 @@
 	<li><a href="https://www.w3.org/" target="_blank">w3c</a></li>
 	<li><a href="https://www.w3schools.com/"  target="_blank">Schools</a></li>
 	<li><a href="https://www.html.com/"  target="_blank">html</a></li>
-	<li><a href="http:///www.smashinagmaine"  target="_blank">Smashing Magazine</a></li>
+	<li><a href="http:///www.smashingmagazine.com"  target="_blank">Smashing Magazine</a></li>
 	<li><a href="https://imageresizer.com/image-compressor"  target="_blank">Image Compressor</a></li>
 	<li><a href="https://validator.w3.org/"  target="_blank">HTML Validator</a></li>
 	<li><a href="https://emmet.io/"  target="_blank">Emmet</a></li>
