--- a/analyze appply extend/analyze appply extend/analyze/analyze03.html
+++ b/analyze appply extend/analyze appply extend/analyze/analyze03.html
@@ -34,7 +34,7 @@
 	</main>
 	
 	<footer>
-		<p>Student Name: </p>
+		<p>erik stephens </p>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 	</footer>
 
