--- a/analyze appply extend/analyze appply extend/apply/index.html
+++ b/analyze appply extend/analyze appply extend/apply/index.html
@@ -48,19 +48,19 @@
 		<div id="semantic">
 
     <h3>HTML5 Semantic Elements</h3>
-    <p>Header</p>
+    <dt>Header</dt>
     <p>The header element is used to contain header content on a webpage, such as a company name and logo.</p>
 
-    <p>Nav</p>
-    <p>The nav element is used to contain navigation links on a webpage.</p>
+    <dt>Nav</dt>
+    <dd>The nav element is used to contain navigation links on a webpage.</dd>
 
-    <p>Main</p>
-    <p>The main element is used to contain the main content on a webpage.</p>
+    <dt>Main</dt>
+    <dd>The main element is used to contain the main content on a webpage.</dd>
 
-    <p>Footer</p>
-    <p>The footer element is used to contain footer content on a webpage, such as copyright information.</p>
+    <dt>Footer</dt>
+    <dd>The footer element is used to contain footer content on a webpage, such as copyright information.</dd>
 
-    <p>Visit W3Schools.com to learn more about HTML semantic elements.</p>
+    <dd><a href="https://www.w3schools.com/"> W3Schools.com to learn more about HTML semantic elements.</a></dd>
 		</div>
 	</main>
 	
