--- a/analyze appply extend/analyze appply extend/apply/js.html
+++ b/analyze appply extend/analyze appply extend/apply/js.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 	
-	Student Name: 
+	Student Name: erik stpehens
 	File Name: 
 	Date: 
 -->
@@ -15,6 +15,7 @@
 	<!-- Use the header area for the website name or logo. The header contains static content. Update "My Template" with the name of business. -->
 	<header>
 		<h1>Learn JavaScript</h1>
+		<img src="images/web-design.jpg" alt="computer with the text we b desing" height="326" width="450">
 	</header>
 	
 	<!-- Use the nav area to add hyperlinks to other pages within the website. It contains static content. -->
