--- a/analyze appply extend/analyze appply extend/apply/js.html
+++ b/analyze appply extend/analyze appply extend/apply/js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 	
 	Student Name: erik stpehens
-	File Name: 
+	File Name: js
 	Date: 
 -->
 
@@ -44,7 +44,7 @@
 	
 	<!-- Use the footer area to add static footer content. -->
 	<footer>
-		<p>Student Name: </p>
+		<p>erik stpehens</p>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 	</footer>
 	
