--- a/analyze appply extend/analyze appply extend/apply/css.html
+++ b/analyze appply extend/analyze appply extend/apply/css.html
@@ -44,7 +44,7 @@
 	
 	<!-- Use the footer area to add static footer content. -->
 	<footer>
-		<p>Student Name: </p>
+		<p>erik stpehens </p>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 	</footer>
 	
