--- a/analyze appply extend/analyze appply extend/apply/html.html
+++ b/analyze appply extend/analyze appply extend/apply/html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 	
-	Student Name: 
-	File Name: 
+	Student Name: erik stpehens
+	File Name: html
 	Date: 
 -->
 
@@ -15,6 +15,7 @@
 	<!-- Use the header area for the website name or logo. The header contains static content. Update "My Template" with the name of business. -->
 	<header>
 		<h1>Learn HTML</h1>
+		<img src="images/web-design.jpg" alt="computer with the text we b desing" height="326" width="450">
 	</header>
 	
 	<!-- Use the nav area to add hyperlinks to other pages within the website. It contains static content. -->
@@ -44,7 +45,7 @@
 	
 	<!-- Use the footer area to add static footer content. -->
 	<footer>
-		<p>Student Name: </p>
+		<p>erik stpehens </p>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 	</footer>
 	
